<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass_fragment_title_new_password" />

    <EditText
        android:id="@+id/et_new_password_enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forgot_pass_fragment_hint_new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_new_password_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forgot_pass_fragment_hint_confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_new_password_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass_fragment_button_reset_password" />
</LinearLayout>
