<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">

        <ImageView
            android:id="@+id/img_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/background_colors" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="260dp"
                android:layout_height="160dp"
                android:scaleType="fitXY"
                android:src="@drawable/logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Bottom Sheet -->

        <LinearLayout
            android:id="@+id/ll_login_fragment_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:elevation="16dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:behavior_peekHeight="30dp"
            app:behavior_hideable="true"
            android:gravity="center"
            android:background="@drawable/bottom_sheet_background"
            android:maxHeight="600dp">

            <!-- Guide Indicator -->
            <View
                android:id="@+id/bs_handle"
                android:layout_width="36dp"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bs_handle_background" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/tv_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"
                android:text="@string/login_fragment_hint_username" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_fragment_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/et_login_fragment_enter_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/rounded_edittext"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLines="1"
                    app:errorEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"
                android:text="@string/login_fragment_hint_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_fragment_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_login_fragment_enter_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/rounded_edittext"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Forgotten Password Link -->
            <TextView
                android:id="@+id/link_login_fragment_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login_fragment_link_forgot_password"
                android:textAlignment="viewEnd"
                android:textColor="@color/link_color"
                android:textStyle="bold" />

            <!-- Login Button -->
            <Button
                android:id="@+id/btn_login_fragment_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/button_login"
                android:textSize="16sp" />

            <!-- Create Account Link -->
            <TextView
                android:id="@+id/link_login_fragment_dont_have_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login_fragment_link_dont_have_account"
                android:textAlignment="center"
                android:textColor="@color/link_color"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
